<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtotal" />

        <EditText
            android:id="@+id/subtotal_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subtotal_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_percentage" />

        <EditText
            android:id="@+id/tip_percentage_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tip_hint"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/persons" />

        <EditText
            android:id="@+id/persons_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:defaultValue="1"
            android:ems="10"
            android:hint="@string/persons_hint"
            android:inputType="number|numberDecimal" />

        <Button
            android:id="@+id/calculateTipButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculatetip"
            android:text="@string/calculate_tip_button" />

        <Button
            android:id="@+id/tip_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculatepercentage"
            android:text="@string/tip_button" />

        <Button
            android:id="@+id/settings_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="goToSettings"
            android:text="@string/settings_button" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>