<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/default_tip_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/default_tip" />

        <EditText
            android:id="@+id/default_tip_edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tip_hint"
            android:textSize="20sp"
            android:inputType="number" />

        <TextView
            android:id="@+id/currency_text_id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/currency_text" />

        <RadioGroup
            android:id="@+id/radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/euro_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/euro" />

            <RadioButton
                android:id="@+id/pound_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/pound" />

            <RadioButton
                android:id="@+id/dollar_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/dollar" />

        </RadioGroup>

        <Button
            android:id="@+id/apply_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_button"
            android:textSize="20sp"
            android:background="#a2e9f6"
            android:layout_marginTop="10dp"
            android:onClick="apply"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>