<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SatisfactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rating_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rating" />

        <EditText
            android:id="@+id/rating_edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/rating_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/calculate_percentage_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="calculate"
            android:text="@string/calculate_percentage_button" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>